@@ -286,6 +286,7 @@ public class GameUI extends ConsoleHost implements Console.Directory {
 
     protected void added() {
 	resize(parent.sz);
+	ui.gui = this;
 	ui.cons.out = new java.io.PrintWriter(new java.io.Writer() {
 		StringBuilder buf = new StringBuilder();
 		
