@@ -414,6 +414,14 @@ public class MCache {
 	}
     }
 
+    public void invalidateAll() {
+        synchronized (grids) {
+            for(final Grid g : grids.values()) {
+                g.invalidate();
+	    }
+	}
+    }
+
     public void invalidate(Coord cc) {
 	synchronized(req) {
 	    if(req.get(cc) == null)
