@@ -40,3 +40,4 @@
     - Added in pausing via 'p' key
     - Added back the "No Gob Audio" option under Audio Options.
     - Added back in the Grid mode via 'g' key
+    - Added back flatworld, can be toggled in the Options window under Graphics.
